samples/errors/undefined.our
int a;

main()
{
    a = 4 + v;
}

/*
Identifier 'v' not found.  Line: 5
*/